<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/about_titlebar_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/about_title_bar_back"
            android:layout_width="25dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@null"
            android:src="@drawable/back"/>

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/about_title_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@id/about_title_bar_back"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_titlebar_container">

        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/about_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/white"
                android:text="@string/about_know"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>


            <TextView
                android:layout_marginRight="5dp"
                android:id="@+id/tv_author"
                android:lineSpacingMultiplier="1.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorTopBackground"
                android:text="@string/about_author"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/white"
                android:text="@string/about_worth"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorTopBackground"
                android:text="@string/about_project"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/white"
                android:text="@string/about_opensource"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorTopBackground"
                android:drawableLeft="@drawable/ic_fiber_manual_record_black_24dp"
                android:drawablePadding="5dp"
                android:text="@string/about_info_retrofit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorTopBackground"
                android:drawableLeft="@drawable/ic_fiber_manual_record_black_24dp"
                android:drawablePadding="5dp"
                android:text="@string/about_info_glide"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorTopBackground"
                android:drawableLeft="@drawable/ic_fiber_manual_record_black_24dp"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:text="@string/about_info_douban"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorTopBackground"
                android:drawableLeft="@drawable/ic_fiber_manual_record_black_24dp"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:text="@string/about_info_epandableTextView"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorTopBackground"
                android:drawableLeft="@drawable/ic_fiber_manual_record_black_24dp"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:text="@string/about_info_circleImageView"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorTopBackground"
                android:drawableLeft="@drawable/ic_fiber_manual_record_black_24dp"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:text="@string/about_info_bmob"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>