<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.luojiandong.douban.activity.FeedBackActivity">

    <RelativeLayout
        android:id="@+id/feedback_titlebar_container"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/feed_title_bar_back"
            android:layout_width="25dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@null"
            android:src="@drawable/back"/>

        <TextView
            android:id="@+id/feed_title_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/about_title_bar_back"
            android:text="@string/feed_title_bar_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_titlebar_container"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/tv_feedback_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorCard"
                android:lineSpacingMultiplier="1.3"
                android:padding="5dp"
                android:text="@string/app_feedback"/>

            <RadioGroup
                android:id="@+id/feed_radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_feedback_info"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_advice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selctor_rb_border"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/rb_advice"
                    android:textColor="#d0cfd0"/>

                <RadioButton
                    android:id="@+id/rb_consult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/selctor_rb_border"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/rb_consult"
                    android:textColor="#d0cfd0"/>

                <RadioButton
                    android:id="@+id/rb_complain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/selctor_rb_border"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/rb_complain"
                    android:textColor="#d0cfd0"/>
            </RadioGroup>

            <EditText
                android:id="@+id/et_feedback"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/feed_radioGroup"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:gravity="left|start"
                android:hint="@string/et_feedback"
                android:textColor="#d0cfd0"
                android:textSize="15sp"/>

            <LinearLayout
                android:id="@+id/ll_call_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_feedback"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorCard"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/tv_call"
                    android:textColor="#292929"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/et_phone_or_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/et_phone_or_email"
                    android:padding="5dp"
                    android:textSize="14sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_feedback_up"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_call_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/rb_border_checked"
                android:text="提交"
                android:textColor="#d0cfd0"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
